# pyflavor

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  configure  project.config  test.txt
.github/workflows/: ccpp.yml
py/: builtin.hh  builtin.hxx  enumerate.hh  fd.hh  filter.hh  internal.hh  list.hh  map.hh  open.hh  predicate.hh  py.hh  range.hh  reduce.hh  string.hxx  transformed.hh  transformed_iterator.hh  tuple.hh  zip.hh
tests/: builtin.cc
